--- a/visage one.html
+++ b/visage one.html
@@ -108,6 +108,10 @@
                                 <div class="slide-title">
                                     <h2>Hong Kong's Visage One Live Hub</h2>
                                 </div>
+                                <!-- Add View Chinese Version button -->
+                                <div class="slide-view-chinese">
+                                    <a href="visage one Chinese.html" class="btn btn-default">View Chinese Version</a>
+                                </div>
                             </div>
                         </div>
                     </div>
