Update visage one Chinese.html

--- a/visage one Chinese.html
+++ b/visage one Chinese.html
@@ -103,10 +103,10 @@
                         <div class="row">
                             <div class="col col-md-7 col-sm-10 slide-caption">
                                 <div class="slide-subtitle">
-                                    <h4>Harmonizing Jazz and Barber house</h4>
+                                    <h4>爵士乐与发廊的和鸣</h4>
                                 </div>
                                 <div class="slide-title">
-                                    <h2>Hong Kong's Visage One Live Hub</h2>
+                                    <h2>香港 Visage One 音乐现场</h2>
                                 </div>
                             </div>
                         </div>
