Update visage one Chinese.html

--- a/visage one Chinese.html
+++ b/visage one Chinese.html
@@ -108,6 +108,9 @@
                                 <div class="slide-title">
                                     <h2>香港 Visage One 音乐现场</h2>
                                 </div>
+                                <div class="slide-view-english">
+                                    <a href="visage one.html" class="btn btn-default">查看英文版本</a>
+                                </div>
                             </div>
                         </div>
                     </div>
