Update visage one Chinese.html

--- a/visage one Chinese.html
+++ b/visage one Chinese.html
@@ -106,9 +106,9 @@
                                     <h4>爵士乐与发廊的和鸣</h4>
                                 </div>
                                 <div class="slide-title">
-                                    <h2>香港 Visage One 音乐现场</h2>
+                                    <h2>香港 Visage One <br>音乐现场</h2>
                                 </div>
-                                <div class="slide-view-english">
+                                <div class="slide-view-chinese">
                                     <a href="visage one.html" class="btn btn-default">查看英文版本</a>
                                 </div>
                             </div>
