--- a/Robert Waldinger.html
+++ b/Robert Waldinger.html
@@ -109,6 +109,10 @@
                                     <h2>Robert Waldinger shares wisdom on relationships 
                                         in fostering happiness and well-being</h2>
                                 </div>
+                                 <!-- Add View Chinese Version button -->
+                                <div class="slide-view-chinese">
+                                    <a href="Robert Waldinger chinese.html" class="btn btn-default">View Chinese Version</a>
+                                </div>
                             </div>
                         </div>
                     </div>
