Update Little Red Riding Hood.html

--- a/Little Red Riding Hood.html
+++ b/Little Red Riding Hood.html
@@ -103,7 +103,7 @@
                         <div class="row">
                             <div class="col col-md-7 col-sm-10 slide-caption">
                                 <div class="slide-title">
-                                    <h2>Little Red Riding Hood Outwits Wolf, Escapes Forest Danger on Route to Grandmother's</h2>
+                                    <h2>Little Red Riding Hood Outwits Wolf, Escapes Forest Danger at Grandmother's</h2>
                                 </div>
                             </div>
                         </div>
