--- a/Hemispheric Institute.html
+++ b/Hemispheric Institute.html
@@ -108,6 +108,10 @@
                                 <div class="slide-title">
                                     <h2>Unveiling the Hemispheric Institute</h2>
                                 </div>
+                                 <!-- Add View Chinese Version button -->
+                                <div class="slide-view-chinese">
+                                    <a href="Hemispheric Institute chinese.html" class="btn btn-default">View Chinese Version</a>
+                                </div>
                             </div>
                         </div>
                     </div>
