--- a/Little Red Riding Hood.html
+++ b/Little Red Riding Hood.html
@@ -105,6 +105,9 @@
                                 <div class="slide-title">
                                     <h2>Little Red Riding Hood Outwits Wolf, Escapes Forest Danger at Grandmother's</h2>
                                 </div>
+                                <div class="slide-view-chinese">
+                                    <a href="Little Red Riding Hood chinese.html" class="btn btn-default">View Chinese Version</a>
+                                </div>
                             </div>
                         </div>
                     </div>
