Update real estate agent.html

--- a/real estate agent.html
+++ b/real estate agent.html
@@ -108,6 +108,10 @@
                                 <div class="slide-title">
                                     <h2>A Glimpse into the Real Estate Journey of Suki in Hong Kong</h2>
                                 </div>
+                                <div class="slide-view-chinese">
+                                     <a href="real estate agent Chinese.html" class="btn btn-default">View Chinese Version
+                                     </a>
+                                    
                             </div>
                         </div>
                     </div>
