Update real estate agent.html

--- a/real estate agent.html
+++ b/real estate agent.html
@@ -109,9 +109,8 @@
                                     <h2>A Glimpse into the Real Estate Journey of Suki in Hong Kong</h2>
                                 </div>
                                 <div class="slide-view-chinese">
-                                     <a href="real estate agent Chinese.html" class="btn btn-default">View Chinese Version
-                                     </a>
-                                    
+                                     <a href="real estate agent Chinese.html" class="btn btn-default">View Chinese Version</a>
+                                </div>    
                             </div>
                         </div>
                     </div>
