Update Little Red Riding Hood.html

--- a/Little Red Riding Hood.html
+++ b/Little Red Riding Hood.html
@@ -129,12 +129,17 @@
             <div class="border"></div>
             <div class="container">
                 <div class="content_curator">
-                    <p>Yesterday, when Little Red Riding Hood was rescued by the hunter in the first encounter, she and her grandmother teamed up to achieve victory over the cunning Big Bad Wolf in the second attempt. In this heart-stopping experience, she demonstrated remarkable courage and the wisdom gained from experience.</p>
-                    <h3>"Little Red Riding Hood, come here, there is a piece of cake and a bottle of wine. Take them to your grandmother, she is ill and weak, they will do her good. Set out before it gets hot, walk quietly, stay on the path, or you may fall and break the bottle, then your grandmother will get nothing," her mother instructed, "When you enter her room, don't forget to say good morning, and don't peek into every corner before you do."</h3>
-                    <p>The two encounters with the Big Bad Wolf caused quite a stir locally. In the first meeting, the wolf deceived Little Red Riding Hood into leaving the path and swallowed her and her grandmother at her grandmother's house. Fortunately, a passing hunter rescued them from the wolf's belly. Undeterred, the wolf tried again, but Little Red Riding Hood and her grandmother outsmarted him, leading to his punishment in a cleverly set trap.</p>
-                    <p>Danger lurked in the forest as Little Red Riding Hood was lured deep into the woods by the Big Bad Wolf. By the time Little Red Riding Hood arrived at her grandmother's house, the poor old lady had already been swallowed by the wolf. The wolf, disguised in the grandmother's clothing and hat, successfully deceived the little girl and swallowed her as well.</p>
-                    <p>Fortunately, a passing hunter saved them from the wolf's belly while the wolf was sleeping.</p>
-                    <p>Following this experience, when the Big Bad Wolf attempted to deceive her for the second time, Little Red Riding Hood saw through his lies. Under her grandmother's guidance, she successfully set a trap with a steaming hot soup that lured the lurking Big Bad Wolf next to the chimney and brought him to justice.</p>
+                    <p>In the forest yesterday, Little Red Riding Hood encountered the second Big Bad Wolf who was trying to devour her and her grandmother, learning from past experiences, she teamed up with her grandmother to trap the Big Bad Wolf.</p>
+
+                    <h3>"Little Red Riding Hood, come here, there is a piece of cake and a bottle of wine. Take them to your grandmother, she is sick and weak, these will be good for her. Set off before the temperature rises, walk quietly, stay on the path, or you might fall and break the bottle, then your grandmother won't get anything," her mother instructed, "When you enter her room, don't forget to say good morning, and don't look around before you speak."</h3>
+
+                    <p>This was the second encounter of Little Red Riding Hood with the Big Bad Wolf, who was attempting to eat her and her grandmother. In the first encounter with the wolf, both her grandmother and Little Red Riding Hood were swallowed by the wolf but were later rescued by a hunter who cut open the wolf's belly. Thanks to this experience, in the second encounter, Little Red Riding Hood promptly identified the wolf's trickery and, with her grandmother's help, outsmarted him successfully.</p>
+
+                    <p>During the first encounter with the Big Bad Wolf, Little Red Riding Hood disobeyed her mother's instructions. Not only did she reveal her grandmother's address to the wolf, but she was also deceived by the wolf into venturing deep into the forest to gather flowers for her grandmother.</p>
+
+                    <p>When Little Red Riding Hood arrived at her grandmother's house, the poor old lady had already been swallowed by the wolf who was lying in bed wearing her grandmother's clothes and hat. The wolf successfully deceived the little girl and swallowed her as well. A passing hunter rescued them from the wolf's belly while it was sleeping and then filled the wolf's belly with stones to kill the Big Bad Wolf.</p>
+
+                    <p>After this experience, when the second Big Bad Wolf attempted to deceive her, Little Red Riding Hood saw through his lies. She went straight to her grandmother's house. Under her grandmother's guidance, she successfully set a trap with a steaming hot sausage soup that led to the punishment of the lurking Big Bad Wolf near the chimney.</p>
                 </div>        
             </div>                       
 
