Update real estate agent.html

--- a/real estate agent.html
+++ b/real estate agent.html
@@ -133,21 +133,21 @@
             <div class="container">
                 <div class="content_curator">
         
-                    <p>In the fast-paced realm of Hong Kong's real estate market, Suki, a dedicated agent, traverses her daily routine, covering over 15,000 steps amidst physical and mental exertion. Her tenure in the industry is marked by challenges, from language barriers hindering client interactions to clients bypassing agents to finalize deals directly with landlords. Despite these hurdles, Suki's unwavering commitment to client satisfaction and professionalism illuminates the intricate dynamics of the city's real estate sector.</p>
+                    <p>In the fast-paced realm of Hong Kong's real estate market, agent Suki navigates her work among various properties. The physical exhaustion brought on by walking over 15,000 steps each day, coupled with the challenges in all aspects of real estate, places a strain on her physically and mentally. Despite facing these obstacles, Suki's unwavering commitment to client satisfaction and professionalism illuminates the complex dynamics of the city's real estate industry.</p>
 
-                    <h3>“The demands of my profession necessitate not only physical endurance but also a sharp memory to address each client's individual needs and property requirements,” Suki remarks, reflecting on the multifaceted nature of her role.</h3>
+                    <h2>"My profession demands not only physical endurance but also a sharp memory to meet each client's property requirements," Suki remarks.</h2>
 
-                    <p>Language barriers, particularly in English communication, present significant obstacles in Suki's journey. Recounting an encounter with an English-speaking client, she describes the challenges that resulted in missed opportunities. "His colleague took advantage of helping her translate and snatched the client," Suki recalls.</p>
+                    <p>The language barrier resulting from the inability to proficiently use English has posed significant challenges for Suki in her work. Recalling an experience serving an English-speaking client, she describes the missed opportunities that arose from this challenge: "My colleague took advantage of helping me translate and snatched the client."</p>
 
-                    <p>Another significant challenge arises from clients bypassing agents. <strong>"They would use you to view the property, and then they would go directly to the landlord to sign the deal, leaving us behind,"</strong> Suki explains, highlighting a common occurrence in the industry.</p>
+                    <p>Another significant challenge arises from experiences of being "jumped deals." "They would use you to view the property, then go directly to the landlord to sign the deal, enjoying our services before burning bridges," explains Suki, "This is quite common in the industry."</p>
 
-                    <p>Despite safeguards like viewing agreements, clients often strategize before viewing properties, posing challenges for agents like Suki. "If someone intends to deceive you, they will find ways to deceive you," she adds, emphasizing the complexities agents face.</p>
+                    <p>Despite safeguards like viewing agreements, some clients strategize before property viewings. They have relatives sign viewing agreements, allowing them to legally bypass intermediaries and sign contracts directly with landlords: "If someone intends to deceive you, they will find ways to deceive you," she adds.</p>
 
-                    <p>Acknowledgment of agents' efforts through compensation largely hinges on the integrity of clients, a reality Suki grapples with in her daily work. Despite setbacks, she remains steadfast in her pursuit of client satisfaction, showcasing her patience and professionalism in handling challenging cases.</p>
+                    <p>Recognition of an agent's efforts largely depends on the integrity of clients, a reality Suki faces in her daily work. Despite setbacks, she remains steadfast in her pursuit of client satisfaction, demonstrating patience and professionalism in handling challenging cases.</p>
 
-                    <p>Suki's experiences also shed light on the broader landscape of real estate in Hong Kong. While facing trivial tasks and balancing a demanding work schedule, she navigates the intricacies of client relationships with dedication and resilience.</p>
+                    <p>Suki's experiences also unveil the behind-the-scenes stories of Hong Kong's real estate. While managing trivial tasks and balancing a hectic work schedule, she solidifies relationships with each client through dedication and resilience.</p>
 
-                    <p>In both her professional and personal life, Suki's narrative reflects the myriad challenges and rewards of Hong Kong's vibrant real estate sector, underscoring the perseverance required to thrive in this dynamic environment.</p>
+                    <p>In both her professional and personal life, Suki's story reflects the myriad challenges and rewards of Hong Kong's vibrant real estate industry, emphasizing the perseverance required to thrive in this dynamic environment.</p>
                      
                 </div>                    
             </div>                       
