--- a/Hemispheric Institute.html
+++ b/Hemispheric Institute.html
@@ -147,10 +147,11 @@
                     </div>
                     <h3><strong>VR Spatial Design</strong></h3>
                     <div style="text-align: center;" >
-                        <video controls autoplay muted width=800> 
+                        <video controls autoplay muted style="width:100%; height:auto;"> 
                             <source src="assets\images\gallery\hermis-VIDEO.mp4" type="video/mp4" alt class="slider-bg">
                         </video>
                     </div>
+
                     <p>In this hybrid platform, South American artists find a platform for expression blending offline performances on physical stages with online database, forming a robust and influential artistic community. Through dialogues, lectures, roundtable discussions, panels, artist talks, and performances, artists freely express their beliefs and viewpoints.</p>
 
                     <p>Our VR prototype reflects these diverse forms of artistic expression. Upon donning VR glasses, users are transported into a world of staggered circular stages, each offering unique interactive experiences and sounds corresponding to the artists' performance styles. For instance, the performance stage hosts various activities, immersing players in the lively ambiance upon entry, while floating walls symbolize the upload process to the database.</p>
