--- a/Hemispheric Institute chinese.html
+++ b/Hemispheric Institute chinese.html
@@ -144,7 +144,7 @@
                     </div>
                     <h3><strong>虚拟现实空间设计</strong></h3>
                     <div style="text-align: center;">
-                        <video controls autoplay muted width=800>
+                        <video controls autoplay muted style="width:100%; height:auto;">
                             <source src="assets\images\gallery\hermis-VIDEO.mp4" type="video/mp4" alt class="slider-bg">
                         </video>
                     </div>
