--- a/Hemispheric Institute.html
+++ b/Hemispheric Institute.html
@@ -110,7 +110,7 @@
                                 </div>
                                  <!-- Add View Chinese Version button -->
                                 <div class="slide-view-chinese">
-                                    <a href="Hemispheric Institute chinese.html" class="btn btn-default">View Chinese Version</a>
+                                    <a href="Hemispheric Institute chinese.html" class="btn btn-default">查看中文版本</a>
                                 </div>
                             </div>
                         </div>
