--- a/Little Red Riding Hood.html
+++ b/Little Red Riding Hood.html
@@ -106,7 +106,7 @@
                                     <h2>Little Red Riding Hood Outwits Wolf, Escapes Forest Danger at Grandmother's</h2>
                                 </div>
                                 <div class="slide-view-chinese">
-                                    <a href="Little Red Riding Hood chinese.html" class="btn btn-default">View Chinese Version</a>
+                                    <a href="Little Red Riding Hood chinese.html" class="btn btn-default">查看中文版本</a>
                                 </div>
                             </div>
                         </div>
