--- a/Robert Waldinger.html
+++ b/Robert Waldinger.html
@@ -111,7 +111,7 @@
                                 </div>
                                  <!-- Add View Chinese Version button -->
                                 <div class="slide-view-chinese">
-                                    <a href="Robert Waldinger chinese.html" class="btn btn-default">View Chinese Version</a>
+                                    <a href="Robert Waldinger chinese.html" class="btn btn-default">查看中文版本</a>
                                 </div>
                             </div>
                         </div>
