--- a/real estate agent.html
+++ b/real estate agent.html
@@ -109,7 +109,7 @@
                                     <h2>A Glimpse into the Real Estate Journey of Suki in Hong Kong</h2>
                                 </div>
                                 <div class="slide-view-chinese">
-                                     <a href="real estate agent Chinese.html" class="btn btn-default">View Chinese Version</a>
+                                     <a href="real estate agent Chinese.html" class="btn btn-default">查看中文版本</a>
                                 </div>    
                             </div>
                         </div>
