Update real estate agent chinese.html

--- a/real estate agent chinese.html
+++ b/real estate agent chinese.html
@@ -109,7 +109,7 @@
                                     <h2>Suli的房地产历程</h2>
                                 </div>
                                 <div class="slide-view-chinese">
-                                    <a href="real estate agent.html" class="btn btn-default">查看英文版本</a>
+                                    <a href="real estate agent.html" class="btn btn-default">View English Version</a>
                                 </div>
                             </div>
                         </div>
