Update visage one Chinese.html

--- a/visage one Chinese.html
+++ b/visage one Chinese.html
@@ -108,6 +108,9 @@
                                 <div class="slide-title">
                                     <h2>Hong Kong's Visage One Live Hub</h2>
                                 </div>
+                                <div class="slide-view-chinese">
+                                    <a href="real estate agent.html" class="btn btn-default">View English Version</a>
+                                </div>
                             </div>
                         </div>
                     </div>
