Update visage one Chinese.html

--- a/visage one Chinese.html
+++ b/visage one Chinese.html
@@ -109,7 +109,7 @@
                                     <h2>Hong Kong's Visage One Live Hub</h2>
                                 </div>
                                 <div class="slide-view-chinese">
-                                    <a href="real estate agent.html" class="btn btn-default">View English Version</a>
+                                    <a href="visage one.html" class="btn btn-default">View English Version</a>
                                 </div>
                             </div>
                         </div>
