--- a/Robert Waldinger chinese.html
+++ b/Robert Waldinger chinese.html
@@ -110,7 +110,7 @@
                                         <br>关于促进幸福和福祉的人际关系的智慧</h2>
                                 </div>
                                 <div class="slide-view-chinese">
-                                    <a href="Robert Waldinger.html" class="btn btn-default">查看英文版本</a>
+                                    <a href="Robert Waldinger.html" class="btn btn-default">View English Version</a>
                                 </div>
                             </div>
                         </div>
