Update Little Red Riding Hood chinese.html

--- a/Little Red Riding Hood chinese.html
+++ b/Little Red Riding Hood chinese.html
@@ -107,7 +107,7 @@
                                         <br>在祖母家逃离逃出生天</h2>
                                 </div>
                                 <div class="slide-view-chinese">
-                                    <a href="Little Red Riding Hood.html" class="btn btn-default">查看英文版本</a>
+                                    <a href="Little Red Riding Hood.html" class="btn btn-default">View English Version</a>
                                 </div>
                             </div>
                         </div>
