Update Hemispheric Institute chinese.html

--- a/Hemispheric Institute chinese.html
+++ b/Hemispheric Institute chinese.html
@@ -109,7 +109,7 @@
                                     <h2>揭开半球学院的面纱</h2>
                                 </div>
                                 <div class="slide-view-chinese">
-                                    <a href="Hemispheric Institute.html" class="btn btn-default">查看英文版本</a>
+                                    <a href="Hemispheric Institute.html" class="btn btn-default">View English Version</a>
                                 </div>
                             </div>
                         </div>
