Update Hemispheric Institute chinese.html

--- a/Hemispheric Institute chinese.html
+++ b/Hemispheric Institute chinese.html
@@ -133,11 +133,11 @@
             <div class="container">
                 <div class="content_curator">
         
-                    <p>美洲半球研究所连接美洲的艺术家、学者和活动家，强调通过研究和政治参与的表演来推动社会正义。与活动和出版负责人的访谈深入探讨了该研究所的关系网络，说明了现场活动和数字出版如何超越地理限制扩展其影响力。</p>
+                    <p>通过美洲半球研究所链接的美洲的艺术家、学者和活动家们，通过表演或演讲等形式，表达他们的政治立场以推动社会的公平与正义。我们通过与活动和出版负责人深入探讨该研究所链接的众多表达者的关系网络，了解到现场活动和数字出版如何实现超越地理限制的影响力。</p>
 
-                    <p>作为合作和行动主义的平台，美洲半球研究所在连接美洲各地发挥了重要作用。该研究所着重关注社会正义问题，涉足有政治参与的表演领域。以聚会、课程、出版物和档案为载体扩大其影响。</p>
+                    <p>作为合作和行动主义者的平台，美洲半球研究所在连接美洲的表达者们发挥了重要作用。他们着重关注社会与公平正义相关的议题，涉足有政治参与的表演领域。以聚会、课程、出版物和档案为载体将他们的声音扩散到网络。</p>
 
-                    <p>通过与活动和出版负责人等关键人物的访谈，我们深入了解了该研究所超越了地理障碍的各种推广形式。现场活动和数字出版之间的相互关联有助于传播知识并促进关系网络的紧密链接，也证实了该研究所的包容和与外界的链接。</p>
+                    <p>通过与活动和出版负责人等关键人物的访谈，我们深入了解了该研究所超越了地理限制的各种信息传播形式。这种将现场活动和数字出版之间的相辅相成的运作方式有效的促进了信息的传播及关系网络的紧密链接。</p>
 
                     <div style="text-align: center;" width=50>
                         <img src="assets\images\blog\VR Diagram.jpg" alt="">
@@ -148,9 +148,9 @@
                             <source src="assets\images\gallery\hermis-VIDEO.mp4" type="video/mp4" alt class="slider-bg">
                         </video>
                     </div>
-                    <p>线下舞台表演与在线数据库相结合，南美艺术家的观点得以表达，形成了一个强大而有影响力的艺术社区。通过对话、讲座、圆桌讨论、专题讨论、艺术家讲座和表演，艺术家自由表达他们的信仰和观点。</p>
+                    <p>通过线下的舞台表演与在线数据库相结合，他们粘结成了一个强大而有影响力的艺术社群。这个社群通过对话、讲座、圆桌讨论、专题讨论、艺术家讲座和表演，表达其政治立场</p>
 
-                    <p>我们的虚拟现实原型重现了这些多样的艺术表达。戴上虚拟现实眼镜，用户被带入一个世界，其中有多个错落的圆形舞台，每个舞台提供独特的互动体验和与艺术家表演风格相对应的声音。例如，表演舞台上有各种活动，让玩家在进入时沉浸在生动的氛围中，而漂浮的墙壁象征着线下的表演上传到数据库的过程。</p>
+                    <p>我们的虚拟现实空间重现了这些多样的艺术表达。当你戴上VR眼镜，就会被带入一个世界。这个世界有多个错落的圆形舞台，每个舞台提供独特的互动体验和与艺术家表演风格相对应的声音。例如，表演舞台的部分有各种活动，让玩家在进入时沉浸在生动的氛围中，而漂浮的墙壁象征着线下的表演上传到数据库的过程。</p>
 
                     <p>在这个空间中，声音相互融合并相互影响，反映了平台在促进文化繁荣和艺术家之间更紧密联系方面的作用。</p>
 
