Update Little Red Riding Hood chinese.html

--- a/Little Red Riding Hood chinese.html
+++ b/Little Red Riding Hood chinese.html
@@ -130,11 +130,11 @@
             <div class="border"></div>
             <div class="container">
                 <div class="content_curator">
-                    <p>在昨天的森林中，小红帽遇到第二只试图把他和奶奶当作食物的大灰狼并吸取以往中计的教训，与奶奶联手让大灰狼落入陷阱。</p>
+                    <p>在昨天的森林中，小红帽遇到第二只试图把他和奶奶当作食物的大灰狼。她吸取以往中计的教训，与奶奶联手让大灰狼落入陷阱。</p>
 
                     <h3>"小红帽，来吧，这里有一块蛋糕和一瓶酒。把它们带给你的奶奶，她病了，虚弱，这些会对她有好处。在气温上升之前出发，走路要安静，不要离开道路，否则你可能会摔倒打破瓶子，那样你的奶奶就得不到东西了。”她妈妈交代道，“进入她的房间时，不要忘记说早上好，也不要在说之前眼睛到处瞄。"</h3>
 
-                    <p>这是小红帽遇到的第二只试图把她和奶奶当作食物的大灰狼。在遇到第一只大灰狼时，奶奶和小红帽在先后被大灰狼吞下后被猎人剖开狼肚解救。感谢第一次的经验，遇到第二只狼时，小红帽及时识别出了他的诡计，并与奶奶成功地智胜了他。</p>
+                    <p>这是小红帽遇到的第二只试图把她和奶奶当作食物的大灰狼。在遇到第一只大灰狼时，奶奶和小红帽在先后被大灰狼吞下后被猎人剖开狼肚解救。得益于第一次的经验，遇到第二只狼时，小红帽及时识别出了他的诡计，并与奶奶成功地智胜了他。</p>
 
                     <p>第一次遇到大灰狼时，小红帽违背了妈妈的交代。不但告诉大灰狼奶奶家的地址，还被大灰狼骗进了森林深处采集可以带给祖母的花朵。</p>
 
