Update Robert Waldinger chinese.html

--- a/Robert Waldinger chinese.html
+++ b/Robert Waldinger chinese.html
@@ -138,17 +138,17 @@
 
                     <h3> “首先，社交关系对我们非常有益。孤独是致命的。事实证明，与家人、朋友、社区有更多社交联系的人更幸福。他们身体更健康，...我们学到的第二个重要教训是，重要的不仅是你拥有多少朋友，也不仅是你是否处于一段稳定的关系中，而是你亲密关系的质量才重要，...我们从关系对健康的第三个重要教训是，良好的关系不仅保护我们的身体，也保护我们的大脑。”</h3>
 
-                    <p>根据哈佛成人发展研究，个人与家庭和朋友的紧密联系对充实的人生至关重要。研究发现这些关系对保持身心愉悦健康至关重要。演讲者强调比起与其追求财富和名望，人们更应该把时间和精力放在与他人之间的联系上。</p>
+                    <p>哈佛的成人发展研究结果显示，个人与家庭和朋友的紧密联系对拥有充实感受的人生至关重要，对保持身心愉悦健康亦至关重要。演讲者强调比起追求财富和名望，人们更应该把时间和精力放在与他人之间的链接上。</p>
 
-                    <p>Waldinger表示，这是一项引人注目的纵向研究，已经持续了75年之久。这项广泛的研究计划已经细致地跟踪了724名男性的生活，跨越了多代研究人员，提供了对促成充实和满足生活的因素的全面了解。</p>
+                    <p>Waldinger表示，这是一项引人注目的研究，已经持续了75年之久。这项研究计划已经细致地跟踪了724名男性的生活，跨越了多代研究人员，全面研究了促成充实美满生活的条件。</p>
 
-                    <p>‘这项研究的创始人们从未想象过，75年后的今天，我会站在这里告诉你们这项研究仍在继续。’通过定期进行的调查、访谈、医学检查和心理评估，对参与者的经历、关系和健康结果进行了分析，这些参与者来自不同的背景。研究中的一个群体由来自特权背景，他们拥有高等教育、财务稳定和社会联系，而另一个群体则由面临有限教育机会、财务不安和社会差异等挑战的更具挑战性的社会经济环境。</p>
+                    <p> “这项研究的创始人们从未想象过，75年后的今天，我会站在这里告诉你们这项研究仍在继续。” 研究通过定期进行的调查、访谈、医学检查和心理评估，对参与者的经历、关系和健康结果进行分析。这些参与者来自不同的背景。研究中的一个群体由来自优越的成长环境，他们接受高等教育、拥有稳定的财务状况和健康的社会联系；而另一个群体则由处于有限教育机会、财务安全无法得到保障和社会差距等更具挑战性的社会经济环境。</p>
 
-                    <p>其中一个关键发现是关系和社会联系在促进幸福感和长寿+方面的重要性。研究强调，无论是来自特权还是具有挑战性的社会经济背景的个体，只要他们保持亲密的关系和强大的社会支持网络，就能过上满意的生活。</p>
+                    <p>其中一个关键的结论是人与人之间的链接和人与社会的联系在提升幸福感和延年益寿的重要性。研究强调，无论是来自特权还是具有挑战性的社会经济背景的个体，只要他们保持亲密的关系和强大的社会支持网络，就能过上美满的生活。</p>
 
-                    <p>Waldinger强调了物质财富之外的因素在决定生活满意度方面的重要性。虽然社会经济地位确实发挥作用，但研究表明，如适应性、适应能力和与他人建立有意义联系的能力等品质对整体幸福同样至关重要。</p>
+                    <p>Waldinger强调了物质财富之外的因素在决定生活满意度方面的重要性。虽然社会经济地位确实发挥作用，但适应性、适应能力和与他人建立有意义联系的能力对幸福感同样至关重要。</p>
 
-                    <p>‘（我作为）一个老人在这里。（认为这是）非常精彩的演讲。而且百分之百真实。当我年轻的时候，我花了很多时间努力工作，担心我们的财务状况。我很高兴我们努力工作并为未来做了规划。但我更高兴的是，我和我的妻子也花时间彼此相处，和我们的两个儿子在一起，’来自现场活动的观众Andrew Heffel说，‘我们一起做所有的事情。运动、度假、周末出游、大声阅读书籍、一起祈祷。现在，我最大的快乐是和我可爱的妻子在一起，以及每周和我们已经长大但仍然亲近我们的儿子通电话。我希望每个人都能体验到被爱和理解的快乐。’</p>
+                    <p>“（我作为）一个老人在这里。（认为这是）非常精彩的演讲。而且百分之百真实。当我年轻的时候，我花了很多时间努力工作，担心我们的财务状况。我很高兴我们努力工作并为未来做了规划。但我更高兴的是，我和我的妻子也花时间彼此相处，和我们的两个儿子在一起，” 来自现场活动的观众Andrew Heffel说，“我们一起做所有的事情。运动、度假、周末出游、大声阅读书籍、一起祈祷。现在，我最大的快乐是和我可爱的妻子在一起，以及每周和我们已经长大但仍然亲近我们的儿子通电话。我希望每个人都能体验到被爱和理解的快乐。” </p>
                    
                     <div style="text-align: center;">
                         <iframe width="800" height="450" src="https://www.youtube.com/embed/q-7zAkwAOYg" frameborder="0" allowfullscreen></iframe>
