--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="hero-slider">
                 <div class="slide">
                     <div class="slider-image">
-                        <img src="assets/images/slider/slide-2.jpg" alt class="slider-bg">
+                        <img src="slider/slide-2.jpg" alt class="slider-bg">
                     </div>
                     <div class="container">
                         <div class="row">
