--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                             <div class="about-content">
                                 <h2>About Me</h2>
                                 <p>Guided by 'Per Aspera ad Astra,' she embodies brilliance from HKBU's Artificial Intelligence and Digital Media program and Pratt's interior design. Her global travels fuel her with cultural diversity and innovation.</p> 
-                                <p>"What will the future hold?" she ponders.</p>
+                                <p>"What will the future hold?" </p>
                                 <p>The steam revolution shaped our workday, but AI may revolutionize it further. As technology advances, individuals face new challenges. Collaboration with machines will demand creativity and adaptability.</p> 
                                 <p>Cultivating herself into an 'H-shaped talent,' she bridges expertise and innovation, poised to embrace the future's demands.</p>
                                 <a href="assets\files\Ning's resume.pdf" class="theme-btn">Download Resume</a>
