--- a/index.html
+++ b/index.html
@@ -266,13 +266,20 @@
                                 </a>
                             </div>
                             <div class="grid Photography">
-                                <a href="assets/images/gallery/img-5.jpg" class="fancybox" data-fancybox-group="gall-1">
+                                <a href="essential absence.html" class="fancybox" data-fancybox-group="gall-1">
                                     <img src="assets\images\gallery\ess.png" alt class="img img-responsive">
                                     <div class="icon">
                                         <i class="ti-plus"></i>
                                     </div>
                                 </a>
-                                
+                            </div>
+                            <div class="grid Photography">
+                                <a href="Anaglyph Wall Paper.html" class="fancybox" data-fancybox-group="gall-1">
+                                    <img src="assets\images\blog\bulldog class final.png" alt class="img img-responsive">
+                                    <div class="icon">
+                                        <i class="ti-plus"></i>
+                                    </div>
+                                </a>
                             </div>
                             <div class="grid Commercial">
                                 <a href="https://www.behance.net/gallery/93078409/United-Nude-Concept-Store-Retail-Design?tracking_source=project_owner_other_projects" class="fancybox" data-fancybox-group="gall-1">
