--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="grid Photography">
+                            <div class="grid Digital-Space-Design">
                                 <a href="essential absence.html" class="fancybox" data-fancybox-group="gall-1">
                                     <img src="assets\images\gallery\ess.png" alt class="img img-responsive">
                                     <div class="icon">
@@ -273,7 +273,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="grid Photography">
+                            <div class="grid Digital-Space-Design">
                                 <a href="Anaglyph Wall Paper.html" class="fancybox" data-fancybox-group="gall-1">
                                     <img src="assets\images\blog\bulldog class final.png" alt class="img img-responsive">
                                     <div class="icon">
