--- a/Anaglyph Wall Paper.html
+++ b/Anaglyph Wall Paper.html
@@ -326,7 +326,7 @@
                     </div>
                     <div class="col-12">
                         <div class="footer-sub">
-                            <p><i class="fa fa-copyright"></i>Copyright &copy; 2019.Company name All rights reserved.</p>
+                            <p>Copyright &copy; 2019.Company name All rights reserved.</p>
                         </div>
                     </div>
                 </div>
