Update visage one Chinese.html

--- a/visage one Chinese.html
+++ b/visage one Chinese.html
@@ -295,47 +295,6 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-7 col-md-7 col-sm-7">
-                        <div class="contact-area contact-area-2 contact-area-3">
-                            <h2>快速联络方式</h2>
-                            <div class="contact-form">
-                                <form method="post" class="contact-validation-active" id="contact-form">
-                                    <div class="half-col">
-                                        <input type="text" name="name" id="name" class="form-control" placeholder="Your Name">
-                                    </div>
-                                    <div class="half-col">
-                                        <input type="email" name="email" id="email" class="form-control" placeholder="Your Email">
-                                    </div>
-                                    <div class="half-col">
-                                        <input type="text" name="phone" id="phone" class="form-control" placeholder="Your Phone">
-                                    </div>
-                                    <div class="half-col">
-                                        <input type="text" name="address" id="address" class="form-control" placeholder="Address">
-                                    </div>
-                                    <div>
-                                        <textarea class="form-control" name="note"  id="note" placeholder="Your Massage..."></textarea>
-                                    </div>
-                                    <div class="submit-btn-wrapper">
-                                        <button type="submit" class="theme-btn-s3">提交</button>
-                                        <div id="loader">
-                                            <i class="fa fa-refresh fa-spin fa-3x fa-fw"></i>
-                                        </div>
-                                    </div>
-                                    <div class="clearfix error-handling-messages">
-                                        <div id="success">谢谢</div>
-                                        <div id="error"> 发送邮件时出现错误，请再次尝试</div>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col col-xs-12">
-                        <div class="contact-map">
-                            <iframe src="" allowfullscreen></iframe>
-                        </div>
-                    </div>
                 </div>
             </div>
        </div>
@@ -362,7 +321,7 @@
                     </div>
                     <div class="col-12">
                         <div class="footer-sub">
-                            <p><i class="fa fa-copyright"></i>Copyright &copy; 2019.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
+                            <p>Copyright &copy; 2019.Company name All rights reserved.</p>
                         </div>
                     </div>
                 </div>
