--- a/Hemispheric Institute.html
+++ b/Hemispheric Institute.html
@@ -287,7 +287,7 @@
                     </div>
                     <div class="col-12">
                         <div class="footer-sub">
-                            <p><i class="fa fa-copyright"></i>Copyright &copy; 2019.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
+                            <p>Copyright &copy; 2019.Company name All rights reserved.</p>
                         </div>
                     </div>
                 </div>
