--- a/index.html
+++ b/index.html
@@ -289,6 +289,14 @@
                                     </div>
                                 </a>
                             </div>
+                            <div class="grid Commercial">
+                                <a href="https://www.kinpan.com/detail/index/1685529630562054669987" class="fancybox" data-fancybox-group="gall-1">
+                                    <img src="assets\images\gallery\zlt.jpg" alt class="img img-responsive">
+                                    <div class="icon">
+                                        <i class="ti-plus"></i>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div> <!-- end row -->
