--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         </div>
         <!-- service-area end -->
         <!--Start project area-->  
-        <section id="protfolio" class="gallery-section section-padding">
+        <section id="blog" class="blog-section section-padding">
             <div class="container">
                 <div class="row">
                     <div class="col col-xs-12 sortable-gallery">
