--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         </div>
         <!-- service-area end -->
         <!--Start project area-->  
-        <section id="blog" class="blog-section section-padding">
+        <section id="protfolio" class="gallery-section section-padding">
             <div class="container">
                 <div class="row">
                     <div class="col col-xs-12 sortable-gallery">
@@ -303,7 +303,7 @@
             </div>
         </section>
         <!--End project area--> 
-        <section id="blog" class="blog-section section-padding">
+        <section id="protfolio" class="gallery-section section-padding">
             <div class="container">
                 <div class="col-l2">
                     <div class="section-title section-title2 text-center">
