--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
             </div>
         </section>
         <!--End project area--> 
-        <section id="protfolio" class="gallery-section section-padding">
+        <section id="blog" class="blog-section section-padding">
             <div class="container">
                 <div class="col-l2">
                     <div class="section-title section-title2 text-center">
